fixed home overflow and favicon

--- a/styles/index.css
+++ b/styles/index.css
@@ -217,7 +217,7 @@ header.sticky ul li a {
 /* Hero Section */
 
 #hero {
-    height: 630px;
+    height: 702px;
     background-image: url(../assets/img/hero/hero-banner.png);
     background-size: cover;
     background-position: top center;
